--- a/GetStartedApp/Views/ProjectsView.axaml
+++ b/GetStartedApp/Views/ProjectsView.axaml
@@ -22,11 +22,8 @@
         <TextBox Width="200"
                  Watermark="🔍 Search" Text="{Binding Filter}" KeyDown="FilterTextBoxKeyDown" />
         <Button Name="FilterButton" Content="Filter" Command="{Binding FilterProjectsCommand}" />
-        <Button Content="➕ Create Project"
-                Background="#3B82F6"
-                Foreground="White"
+        <Button Content="Create Project"
                 Padding="8,4"
-                CornerRadius="4"
                 Command="{Binding OpenCreateProjectCommand}" />
         <Button Content="Edit" Command="{Binding EditProjectCommand}" />
       </StackPanel>
