Add time log approval

--- a/GetStartedApp/App.axaml
+++ b/GetStartedApp/App.axaml
@@ -43,6 +43,9 @@
     <DataTemplate DataType="vm:CreateReportViewModel">
       <views:CreateReportView />
     </DataTemplate>
+    <DataTemplate DataType="vm:ApproveTimeLogViewModel">
+      <views:ApproveTimeLogView />
+    </DataTemplate>
   </Application.DataTemplates>
 
   <!-- 🎨 Global styling -->
